objects/TableGridState__c.object
<CustomObject>
    <description>UP2GO Component: 2Forecast internal object to save the state of a TableGrid/2Table instance.</description>
    <fields>
        <fullName>GridId__c</fullName>
        <label>GridId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TableGridStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chk_SortDescending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sortDescending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fieldNames__c</fullName>
        <label>fieldNames</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>filterStatements__c</fullName>
        <label>filterStatements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lkp_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TableGridStateObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mode__c</fullName>
        <defaultValue>&quot;list&quot;</defaultValue>
        <label>mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num_PageNumber__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_PageSize__c</fullName>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageNumber__c</fullName>
        <label>pageNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageSize__c</fullName>
        <label>pageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sortBy__c</fullName>
        <label>sortBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortDescending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sortDescending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>txt_GridId__c</fullName>
        <label>GridId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Mode__c</fullName>
        <defaultValue>&quot;list&quot;</defaultValue>
        <label>Display Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PageUrl__c</fullName>
        <label>Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SortBy__c</fullName>
        <label>Sort By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtl_FieldNames__c</fullName>
        <label>Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txtl_FilterStatements__c</fullName>
        <label>Filter Statements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>TableGridState</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TableGridStates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>